# psp_playlist_maker

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  WINDOWS_BUILD.md  build_releases.sh
.github/workflows/: release.yml
benches/: scan_bench.rs
src/: album_art.rs  db.rs  embedded_art.rs  gui.rs  itunes_art.rs  lib.rs  main.rs  metadata.rs  music.rs  playlist.rs
